--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>My first website</title>
   </head>
   <body>
-    <h1>Hello World! Coding4All is fantastic! </h1> 
+    <h1>Hello Myself Payal Galpelli<h1> 
   </body>
 </html>
