--- a/index.html
+++ b/index.html
@@ -3,6 +3,27 @@
     <title>My first website</title>
   </head>
   <body>
-    <h1>Hello Myself Payal Galpelli<h1> 
+    <h1><mark>INTRODUCTION</mark></h1> 
+    <p style="color:red;"><i>Myself Payal Galpelli!<br>I gave my HSC boards this year and now I'm thinking to pursure B.tech in computer science.Some of my interests,dreams and habits are mentioned below.</i></p>
+  <ul><li><b>Interests</b></li></ul>
+  <ol><li>Acting & Dancing</li>
+  <li>Travelling</li>
+  <li>Art & Craft</li></ol>
+  <ul><li><b>Dreams</b></li></ul>
+  <ol><li>A meet with any tollywood celebrity</li>
+  <li>Scuba diving</li>
+  <li>Travelling out of India</li></ol>
+  <ul><li><b>Habits</b></li></ul>
+  <table - border=10>
+  <tr><th>Good habits</th>
+  <th>Bad habits</th></tr>
+  <tr><td>Excersise daily</td>
+  <td>Excessive mobile use</td></tr>
+  <tr><td>Writing diary</td>
+  <td>Unhealthy eating</td></tr>
+  </table>
+  <br>
+  <center><i>THANKYOU:)</i></center>
+  <hr>
   </body>
 </html>
