--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
     <title>My first website</title>
   </head>
   <body>
-    <h1><mark>INTRODUCTION</mark></h1> 
-    <p style="color:red;"><i>Myself Payal Galpelli!<br>I gave my HSC boards this year and now I'm thinking to pursure B.tech in computer science.Some of my interests,dreams and habits are mentioned below.</i></p>
+    <h1 style="text-align: centre;border-style:solid;margin-left:80; margin-right: 95;"><mark>INTRODUCTION</mark></h1>
+    <p style="background-color: deepskyblue"><i> Myself, Payal Galpelli! 
+    <br>
+    I gave my HSC boards and now I'm thinking to pursue B.tech in computer science.some of my interests,dreams and habits are mentioned below.</i></p>
   <ul><li><b>Interests</b></li></ul>
-  <ol><li>Acting & Dancing</li>
-  <li>Travelling</li>
-  <li>Art & Craft</li></ol>
+  <ol style="font-family: 'Courier New', Courier, monospace"><li style="color:blue;font-size: 20px">Acting & Dancing</li>
+  <li style="color:blue;font-size:20px">Travelling</li>
+  <li style="color:blue;font-size:20px">Art & Craft</li></ol>
   <ul><li><b>Dreams</b></li></ul>
-  <ol><li>A meet with any tollywood celebrity</li>
-  <li>Scuba diving</li>
-  <li>Travelling out of India</li></ol>
+  <ol style="font-family: 'Courier New', Courier, monospace;font-size: 20px"><li style="color:green">A meet with any tollywood celebrity</li>
+  <li style="color:green">Scuba diving</li>
+  <li style="color:green">Travelling out of India</li></ol>
   <ul><li><b>Habits</b></li></ul>
   <table - border=10>
   <tr><th>Good habits</th>
@@ -22,6 +24,30 @@
   <tr><td>Writing diary</td>
   <td>Unhealthy eating</td></tr>
   </table>
+  <br>
+  <p><b>I have started my small business and I want to show some of the products I made!</b></p>
+  <img src="images/explosion box.jpg" width="220" height="200">
+  <br>
+  <br>
+  <video src="videos/explosion box.mp4"controls width="220" height="200">Explosion Box</video>
+  <br>
+  <br>
+  <label><b style="color:blue">How was it? </b></label><br>
+  <label for="Good">Good</label>
+  <input type="radio" name="feedback" value="Good">
+  <br>
+  <label for="Bad">Bad</label>
+  <input type="radio" name="feedback" value="Bad">
+  <br>
+  <p>I want a small feedback from you.</p>
+  <label><b style="color: red">Your full name</b></label>
+  <input type="text" placeholder="enter your name">
+  <br>
+  <br>
+  <label><b style="color:red">Your feedback here</b></label>
+  <input type="password" placeholder="enter something">
+  <center><button>Done</button></center>
+  <br>
   <br>
   <center><i>THANKYOU:)</i></center>
   <hr>
