--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   <br>
   <p>I want a small feedback from you.</p>
   <label><b style="color: red">Your full name</b></label>
-  <input type="text" placeholder="enter your name">
+  <input type="password" placeholder="enter your name">
   <br>
   <br>
   <label><b style="color:red">Your feedback here</b></label>
-  <input type="password" placeholder="enter something">
+  <input type="text" placeholder="enter something">
   <center><button>Done</button></center>
   <br>
   <br>
