--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <img src="images/explosion box.jpg" width="220" height="200">
   <br>
   <br>
-  <video src="videos/explosion.mp4"type="video/mp4" controls></video>
+  <video src="videos/Explosion.mp4"type="video/mp4" controls></video>
   <br>
   <br>
   <label><b style="color:blue">How was it? </b></label><br>
