--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   <img src="images/explosion box.jpg" width="220" height="200">
   <br>
   <br>
-  <video src="videos/Explosion.mp4"type="video/mp4" controls></video>
+<iframe width="300" height="250" src="Videos/Explosion.mp4"></iframe> 
+<iframe width="300" height="250" src="https://youtu.be/yYJAFfhudB8"></iframe>
   <br>
   <br>
   <label><b style="color:blue">How was it? </b></label><br>
