--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>My first website</title>
   </head>
   <body>
-    <h1 style="text-align: centre;border-style:solid;margin-left:80; margin-right: 95;"><mark>INTRODUCTION</mark></h1>
+    <display:inline-block;text-align:centre;border-style:solid;margin-left:80;margin-right:95;"><mark>INTRODUCTION</mark></h1>
     <p style="background-color: deepskyblue"><i> Myself, Payal Galpelli! 
     <br>
     I gave my HSC boards and now I'm thinking to pursue B.tech in computer science.some of my interests,dreams and habits are mentioned below.</i></p>
@@ -30,7 +30,6 @@
   <br>
   <br>
 <iframe width="300" height="250" src="Videos/Explosion.mp4"></iframe> 
-<iframe width="300" height="250" src="https://youtu.be/yYJAFfhudB8"></iframe>
   <br>
   <br>
   <label><b style="color:blue">How was it? </b></label><br>
