--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>My first website</title>
   </head>
-  <body>
+  <body style="background-color: pink">
 <h1 style="display:inline-block;text-align:centre;border-style:solid;margin-left:150;margin-right:auto;"><mark>INTRODUCTION</mark></h1>
     <p style="background-color: deepskyblue"><i> Myself, Payal Galpelli! 
     <br>
